--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,15 @@ version: '3'
 
 services:
 
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+    ports:
+      - 80:80
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+
   api:
     container_name: api
     build:
